kubernetes/apps/talos1018/capacitor/app/httproute.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infra
    gethomepage.dev/icon: flux-cd.svg
    gethomepage.dev/name: Capacitor
    gethomepage.dev/app: onechart
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "flux.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: capacitor
          port: 9000
