kubernetes/apps/talos1018/capacitor/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-ingress
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infra
    gethomepage.dev/icon: flux-cd.svg
    gethomepage.dev/name: Capacitor
    gethomepage.dev/app: onechart
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "flux.${CLUSTER_DOMAIN}"
      secretName: "capacitor-tls"
  rules:
    - host: "flux.${CLUSTER_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
